src/test/deca/syntax/invalid/test45_decl_method.deca
// Description:
//    Programme testant les declarations de methodes.
//	  Etape(s) : A
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : mismatched input ')' expecting IDENT
//
// Historique:
//    cree le 17/01/2020

class A {
	int fct(int a,){}
}